--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,16 @@ services:
       - app-network
     depends_on:
       - postgres
+      - redis
     env_file:
       - .env
+    environment:
+      - APP_PORT=5000
+      - DB_HOST=postgres
+      - REDIS_HOST=redis
 
   postgres:
-    container_name: docker-postgres
+    container_name: postgres
     image: postgres:latest
     restart: always
     ports:
@@ -22,6 +27,7 @@ services:
     networks:
       - app-network
     environment:
+      - POSTGRES_HOST=postgres
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=${DB_NAME}
@@ -29,13 +35,17 @@ services:
       - postgres-data:/var/lib/postgresql/data
 
   redis:
-    container_name: docker-redis
+    container_name: redis
     image: redis/redis-stack:latest
     restart: always
     ports:
       - '${REDIS_PORT}:${REDIS_PORT}'
     networks:
       - app-network
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=${REDIS_PORT}
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
     volumes:
       - redis-data:/data
 
@@ -44,3 +54,4 @@ volumes:
   redis-data:
 networks:
   app-network:
+    driver: bridge
